Added header block

--- a/src/styles/base/_general.scss
+++ b/src/styles/base/_general.scss
@@ -1,4 +1,22 @@
+body {
+    background-color: $white;
+    font-family: 'Montserrat-Regular', sans-serif;
+    font-size: 14px;
+    color: $black;
+}
+
 h1, h2, h3, h4, h5, h6, ul {
     margin: 0;
     padding: 0;
+}
+
+li {
+    list-style-type: none;
+}
+
+a {
+    text-decoration: none;
+    &:hover {
+        text-decoration: none;
+    }
 }
