Added Intro block

--- a/src/blocks/_modules.scss
+++ b/src/blocks/_modules.scss
@@ -1,3 +1,4 @@
 @import "modules/header/header";
-@import "../styles/vendor/import/breadcrumbs";
+@import "modules/intro/intro";
 @import "modules/footer/footer";
+@import "../styles/vendor/import/breadcrumbs";
