--- a/src/blocks/modules/header/header.scss
+++ b/src/blocks/modules/header/header.scss
@@ -12,6 +12,7 @@
   display: flex;
   align-items: center;
   justify-content: flex-start;
+  padding-top: 15px;
   padding-left: 20px;
 }
 
@@ -54,4 +55,5 @@
 
 .header__address {
   margin-right: 45px;
+  padding-top: 15px;
 }
