--- a/src/views/index.html
+++ b/src/views/index.html
@@ -26,6 +26,7 @@
         <link rel="stylesheet" href="../styles/main.css">
     </head>
     <body>
+        @@include("../blocks/modules/menu/menu.html")
         @@include("../blocks/modules/header/header.html")
         @@include("../blocks/modules/intro/intro.html")
         @@include("../blocks/modules/footer/footer.html")
