Added Home-1 block

--- a/src/blocks/_modules.scss
+++ b/src/blocks/_modules.scss
@@ -1,5 +1,6 @@
 @import "modules/menu/menu";
 @import "modules/header/header";
 @import "modules/intro/intro";
+@import "modules/home-1/home-1";
 @import "modules/footer/footer";
 @import "../styles/vendor/import/breadcrumbs";
