--- a/src/blocks/modules/intro/intro.scss
+++ b/src/blocks/modules/intro/intro.scss
@@ -1,6 +1,6 @@
 .intro {
   padding: 130px 0 120px;
-  background-image: url('../../../img/intro/intro-bg.png');
+  background-image: url('../../../img/home/intro/intro-bg.png');
   background-position: center;
   background-repeat: no-repeat;
   -webkit-background-size: cover;
