--- a/src/blocks/_modules.scss
+++ b/src/blocks/_modules.scss
@@ -2,5 +2,6 @@
 @import "modules/header/header";
 @import "modules/intro/intro";
 @import "modules/home-1/home-1";
+@import "modules/home-2/home-2";
 @import "modules/footer/footer";
 @import "../styles/vendor/import/breadcrumbs";
