--- a/src/views/index.html
+++ b/src/views/index.html
@@ -31,6 +31,7 @@
         @@include("../blocks/modules/intro/intro.html")
         @@include("../blocks/modules/home-1/home-1.html")
         @@include("../blocks/modules/home-2/home-2.html")
+        @@include("../blocks/modules/home-3/home-3.html")
         @@include("../blocks/modules/footer/footer.html")
         <script src="../js/main.js"></script>
         <script src="../js/vendor.js"></script>
