Added Team block

--- a/src/blocks/_modules.scss
+++ b/src/blocks/_modules.scss
@@ -4,5 +4,6 @@
 @import "modules/home-1/home-1";
 @import "modules/home-2/home-2";
 @import "modules/home-3/home-3";
+@import "modules/team/team";
 @import "modules/footer/footer";
 @import "../styles/vendor/import/breadcrumbs";
