--- a/src/styles/helpers/_variables.scss
+++ b/src/styles/helpers/_variables.scss
@@ -7,9 +7,12 @@ $grey: #8e8e8e;
 $h-red: darken($red, 10);
 $h-blue: darken($blue, 10);
 
+$shadow: 0 5px 20px #dbdbdb;
+
 .color-red { color: $red; }
 .color-blue { color: $blue; }
 .color-white { color: $white; }
+.color-grey { color: $grey; }
 
 .overflow-red {
   position: absolute;
@@ -27,3 +30,6 @@ $h-blue: darken($blue, 10);
   bottom: 0;
   background-color: rgba($blue,.8);
 }
+
+.bg-blue { background-color: $blue; }
+.bg-red { background-color: $red; }
