--- a/src/blocks/_modules.scss
+++ b/src/blocks/_modules.scss
@@ -5,5 +5,8 @@
 @import "modules/home-2/home-2";
 @import "modules/home-3/home-3";
 @import "modules/team/team";
+@import "modules/home-4/home-4";
+@import "modules/home-5/home-5";
+@import "modules/home-6/home-6";
 @import "modules/footer/footer";
 @import "../styles/vendor/import/breadcrumbs";
