Added Home-7 block

--- a/src/blocks/_modules.scss
+++ b/src/blocks/_modules.scss
@@ -8,5 +8,6 @@
 @import "modules/home-4/home-4";
 @import "modules/home-5/home-5";
 @import "modules/home-6/home-6";
+@import "modules/home-7/home-7";
 @import "modules/footer/footer";
 @import "../styles/vendor/import/breadcrumbs";
