--- a/src/blocks/modules/team/team.scss
+++ b/src/blocks/modules/team/team.scss
@@ -49,6 +49,9 @@
     border-radius: 0 0 60px 60px;
     box-shadow: 0 0 15px 10px $white;
   }
+  .form-label {
+    font-family: 'Montserrat-Bold', sans-serif;
+  }
   .form-btn {
     justify-content: center;
   }
