--- a/src/blocks/_modules.scss
+++ b/src/blocks/_modules.scss
@@ -9,5 +9,6 @@
 @import "modules/home-5/home-5";
 @import "modules/home-6/home-6";
 @import "modules/home-7/home-7";
+@import "modules/map/map";
 @import "modules/footer/footer";
 @import "../styles/vendor/import/breadcrumbs";
