--- a/src/styles/base/_general.scss
+++ b/src/styles/base/_general.scss
@@ -37,6 +37,15 @@ a {
   }
 }
 
+.container-big {
+  width: 100%;
+  max-width: 1430px;
+  padding-right: 15px;
+  padding-left: 15px;
+  margin-right: auto;
+  margin-left: auto;
+}
+
 .container-small {
   width: 100%;
   max-width: 900px;
