Footer: added mobile version

--- a/src/blocks/_modules.scss
+++ b/src/blocks/_modules.scss
@@ -11,4 +11,5 @@
 @import "modules/home-7/home-7";
 @import "modules/map/map";
 @import "modules/footer/footer";
+@import "modules/footer/footer-mobile";
 @import "../styles/vendor/import/breadcrumbs";
