--- a/src/blocks/modules/header/header.scss
+++ b/src/blocks/modules/header/header.scss
@@ -6,6 +6,7 @@
 .header__box {
   display: flex;
   align-items: flex-start;
+  padding-bottom: 15px;
 }
 
 .header__navigation {
@@ -57,3 +58,54 @@
   margin-right: 45px;
   padding-top: 15px;
 }
+
+
+
+@media (max-width: 1800px) {
+  .header__address {
+    display: none;
+  }
+}
+@media (max-width: 1600px) {
+  .menu {
+    min-height: 727px;
+  }
+}
+@media (max-width: 1540px) {
+  .header__navigation_item {
+    &:last-child {
+      display: none;
+    }
+  }
+}
+@media (max-width: 1350px) {
+  .menu {
+    min-height: 711px;
+  }
+  .header__btn {
+    display: none;
+  }
+}
+@media (max-width: 1200px) {
+  .header__navigation_item {
+    margin-right: 25px;
+  }
+  .breadcrumbs {
+    overflow-x: auto;
+  }
+  .breadcrumbs__item_link {
+    white-space: nowrap;
+  }
+}
+@media (max-width: 1023.98px) {
+  .header__navigation {
+    display: none;
+  }
+  .header__btn {
+    display: flex;
+  }
+  .breadcrumbs {
+    padding: 0 0 15px;
+  }
+}
+@media (max-width: 1000px) {}
