--- a/src/blocks/modules/menu/menu.scss
+++ b/src/blocks/modules/menu/menu.scss
@@ -8,6 +8,7 @@
   box-shadow: 0 3px 10px rgba(0, 0, 0, 0.16);
   border-radius: 0 0 75px;
   background-color: $white;
+  overflow: hidden;
   z-index: 3000;
 }
 
