Header: added mobile version

--- a/src/blocks/_modules.scss
+++ b/src/blocks/_modules.scss
@@ -1,5 +1,7 @@
 @import "modules/menu/menu";
 @import "modules/header/header";
+@import "modules/hamburger/hamburger";
+@import "modules/menu-mobile/menu-mobile";
 @import "modules/intro/intro";
 @import "modules/home-1/home-1";
 @import "modules/home-2/home-2";
