--- a/src/blocks/modules/footer/footer-mobile.scss
+++ b/src/blocks/modules/footer/footer-mobile.scss
@@ -1,4 +1,5 @@
 .footer-mobile {
+  display: none;
   padding: 1px 0 30px;
   background-color: #4b4b4b;
   overflow: hidden;
@@ -58,5 +59,13 @@
       right: 0;
       transform: translate(-50%, -25%) rotate(-45deg);
     }
+  }
+}
+
+
+
+@media (max-width: 1400px) {
+  .footer-mobile {
+    display: block;
   }
 }
