--- a/src/blocks/modules/intro/intro.scss
+++ b/src/blocks/modules/intro/intro.scss
@@ -7,8 +7,49 @@
   background-size: cover;
 }
 
+.intro__tablet {
+  display: none;
+  margin-bottom: 25px;
+  img {
+    width: 100%;
+  }
+}
+
+.intro__mobile {
+  display: none;
+  margin-bottom: 25px;
+  img {
+    width: 100%;
+  }
+}
+
 .intro__title {
   margin-top: 40px;
   margin-bottom: 25px;
   font-size: 28px;
+}
+
+
+
+@media (max-width: 1023.98px) {
+  .intro {
+    padding: 0 0 20px;
+    background-image: none;
+    background-color: $white;
+  }
+  .intro__tablet {
+    display: block;
+  }
+  .intro__title {
+    margin-top: 10px;
+    margin-bottom: 15px;
+  }
+}
+@media (max-width: 576px) {
+  .intro__tablet {
+    display: none;
+  }
+  .intro__mobile {
+    display: block;
+  }
 }
