--- a/src/blocks/modules/home-4/home-4.scss
+++ b/src/blocks/modules/home-4/home-4.scss
@@ -4,3 +4,12 @@
     margin-top: 45px;
   }
 }
+
+@include media-breakpoint-down(sm) {
+  .home-4 {
+    padding: 0;
+    .title-5 {
+      margin-top: 20px;
+    }
+  }
+}
