--- a/src/blocks/modules/home-2/home-2.scss
+++ b/src/blocks/modules/home-2/home-2.scss
@@ -2,3 +2,12 @@
   padding: 50px 0;
   background-color: $white;
 }
+
+@media (max-width: 1023.98px) {
+  .home-2 {
+    padding: 40px 0;
+    .title-2 {
+      margin-top: 30px;
+    }
+  }
+}
