--- a/src/blocks/modules/menu-mobile/menu-mobile.scss
+++ b/src/blocks/modules/menu-mobile/menu-mobile.scss
@@ -52,3 +52,14 @@
     margin-bottom: 0;
   }
 }
+
+@media (max-width: 350px) {
+  .menu-mobile {
+    .accordion__link {
+      font-size: 1em;
+    }
+    .header__navigation_item_link {
+      font-size: 1em;
+    }
+  }
+}
