--- a/src/blocks/_modules.scss
+++ b/src/blocks/_modules.scss
@@ -1,7 +1,7 @@
 @import "modules/menu/menu";
 @import "modules/header/header";
+@import "modules/navigation/navigation";
 @import "modules/hamburger/hamburger";
-@import "modules/menu-mobile/menu-mobile";
 @import "modules/intro/intro";
 @import "modules/home-1/home-1";
 @import "modules/home-2/home-2";
@@ -12,6 +12,6 @@
 @import "modules/home-6/home-6";
 @import "modules/home-7/home-7";
 @import "modules/map/map";
+@import "modules/works/works";
 @import "modules/footer/footer";
 @import "modules/footer/footer-mobile";
-@import "../styles/vendor/import/breadcrumbs";
