--- a/src/blocks/modules/header/header.scss
+++ b/src/blocks/modules/header/header.scss
@@ -7,6 +7,7 @@
   display: flex;
   align-items: flex-start;
   padding-bottom: 15px;
+
   .box {
     display: flex;
     align-items: center;
@@ -19,77 +20,17 @@
   margin-left: -15px;
 }
 
-.header__navigation {
-  display: flex;
-  align-items: center;
-  justify-content: flex-start;
-  padding-top: 15px;
-  padding-left: 20px;
-}
 
-.header__navigation_item {
-  margin-right: 35px;
-}
-
-.header__navigation_item_link {
-  font-family: 'Montserrat-Bold', sans-serif;
-  font-size: 16px;
-  color: $blue;
-  transition: .3s;
-  &:hover {
-    color: $h-blue;
+@include media-breakpoint-up(xl) {
+  .header {
+    padding-left: 18.75vw;
+  }
+  .header__box {
+    padding-bottom: 0.78em;
   }
 }
 
-.header__number {
-  display: flex;
-  align-items: center;
-  font-family: 'Montserrat-Bold', sans-serif;
-  font-size: 24px;
-  color: $black;
-}
-
-.header__number_badge {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  width: 52px;
-  height: 27px;
-  margin-right: 8px;
-  -webkit-border-radius: 5px;
-  -moz-border-radius: 5px;
-  border-radius: 5px;
-  background-color: $red;
-  font-size: 14px;
-  color: $white;
-}
-
-.header__address {
-  margin-right: 45px;
-  padding-top: 15px;
-}
-
-
-
-@media (max-width: 1800px) {
-  .header__address {
-    display: none;
-  }
-}
-@media (max-width: 1540px) {
-  .header__navigation_item {
-    margin-right: 25px;
-    &:last-child {
-      display: none;
-    }
-  }
-}
-@media (max-width: 1350px) {
-  .header__btn {
-    display: none;
-  }
-}
-@media (max-width: 1023.98px) {
+@include media-breakpoint-down(lg) {
   .header {
     padding-left: 0;
   }
@@ -99,15 +40,13 @@
   .header__logo {
     display: flex;
   }
-  .header__navigation {
-    display: none;
-  }
   .header__btn {
     display: flex;
     width: 123px;
     min-width: 123px;
     height: 40px;
     font-size: 12px;
+
     span {
       display: none;
     }
