--- a/src/blocks/modules/menu/menu.scss
+++ b/src/blocks/modules/menu/menu.scss
@@ -65,20 +65,69 @@
   }
 }
 
-
-
-@media (max-width: 1600px) {
+@include media-breakpoint-up(xl) {
   .menu {
-    min-height: 727px;
+    width: 18.2vw;
+    min-height: 45vw;
+    padding: 2vw 0;
+  }
+  .menu__logo{
+    padding: 0 2vw 0 4vw;
+  }
+  .menu__accordion {
+    margin-top: 3.125vw;
+    .card {
+      margin-bottom: 1.82vw;
+    }
+    .accordion__link {
+      width: 12vw;
+      margin: 0 2vw 0 4vw;
+      font-size: 0.83vw;
+    }
+  }
+  .menu__accordion_list_item_link {
+    padding: 6px 2vw 6px 6vw;
+    font-size: 0.73vw;
   }
 }
-@media (max-width: 1350px) {
+
+@include media-breakpoint-down(lg) {
   .menu {
-    min-height: 711px;
+    position: inherit;
+    width: 100%;
+    min-height: auto;
+    margin-bottom: 20px;
+    padding: 0;
+    -webkit-border-radius: 0;
+    -moz-border-radius: 0;
+    border-radius: 0;
+    box-shadow: none;
   }
-}
-@media (max-width: 1023.98px) {
-  .menu {
+  .menu__logo {
     display: none;
+  }
+  .menu__accordion {
+    margin-top: 0;
+    .card {
+      margin-bottom: 20px;
+    }
+    .accordion__link {
+      display: inline-flex;
+      width: auto;
+      margin: 0;
+      &.collapsed {
+        .accordion__arrow {
+          transform: translate(-50%, -100%) rotate(135deg);
+        }
+      }
+    }
+  }
+  .menu__accordion_list_item_link {
+    display: inline-block;
+    padding: 6px 0;
+    background-color: transparent;
+    &.active {
+      background-color: transparent;
+    }
   }
 }
