--- a/src/blocks/_modules.scss
+++ b/src/blocks/_modules.scss
@@ -2,6 +2,7 @@
 @import "modules/header/header";
 @import "modules/navigation/navigation";
 @import "modules/hamburger/hamburger";
+@import "modules/breadcrumbs/breadcrumbs";
 @import "modules/intro/intro";
 @import "modules/home-1/home-1";
 @import "modules/home-2/home-2";
