--- a/src/views/index.html
+++ b/src/views/index.html
@@ -27,6 +27,7 @@
     </head>
     <body>
         @@include("../blocks/modules/header/header.html")
+        @@include("../blocks/modules/breadcrumbs/breadcrumbs-home.html")
         @@include("../blocks/modules/intro/intro.html")
         @@include("../blocks/modules/home-1/home-1.html")
         @@include("../blocks/modules/home-2/home-2.html")
