Clinic: start work in block Reviews

--- a/src/blocks/_modules.scss
+++ b/src/blocks/_modules.scss
@@ -14,5 +14,6 @@
 @import "modules/home-7/home-7";
 @import "modules/map/map";
 @import "modules/works/works";
+@import "modules/reviews/reviews";
 @import "modules/footer/footer";
 @import "modules/footer/footer-mobile";
