Clink: added block Reviews

--- a/src/blocks/_modules.scss
+++ b/src/blocks/_modules.scss
@@ -15,5 +15,6 @@
 @import "modules/map/map";
 @import "modules/works/works";
 @import "modules/reviews/reviews";
+@import "modules/news/news";
 @import "modules/footer/footer";
 @import "modules/footer/footer-mobile";
