--- a/src/blocks/modules/reviews/reviews.scss
+++ b/src/blocks/modules/reviews/reviews.scss
@@ -1,1 +1,68 @@
-.reviews {}
+.reviews {
+  padding-bottom: 90px;
+  background-color: #f9f9f9;
+  overflow: hidden;
+  .title-2 {
+    margin-bottom: 10px;
+  }
+  .team__slider_appointment {
+    margin-top: 30px;
+    &:before {
+      display: none;
+    }
+    &:after {
+      display: none;
+    }
+  }
+}
+
+.reviews__slider {
+  margin-top: 50px;
+  .slick-list {
+    margin: -20px;
+  }
+  .slick-prev {
+    background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='40' height='40' viewBox='0 0 40 40'%3E%3Cdefs%3E%3CclipPath id='rpxxa'%3E%3Cpath fill='%23fff' d='M0 20C0 8.954 8.954 0 20 0s20 8.954 20 20-8.954 20-20 20S0 31.046 0 20z'/%3E%3C/clipPath%3E%3C/defs%3E%3Cg%3E%3Cg%3E%3Cpath fill='none' stroke='%23ff4e4d' stroke-miterlimit='50' stroke-width='4' d='M0 20C0 8.954 8.954 0 20 0s20 8.954 20 20-8.954 20-20 20S0 31.046 0 20z' clip-path='url(&quot;%23rpxxa&quot;)'/%3E%3C/g%3E%3Cg%3E%3Cpath fill='none' stroke='%23ff4e4d' stroke-miterlimit='50' stroke-width='2' d='M22.8 11.5v0l-8.3 8.3v0l8.3 8.3v0'/%3E%3C/g%3E%3C/g%3E%3C/svg%3E");
+  }
+  .slick-next {
+    background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='40' height='40' viewBox='0 0 40 40'%3E%3Cdefs%3E%3CclipPath id='lbwma'%3E%3Cpath fill='%23fff' d='M40 20c0 11.046-8.954 20-20 20S0 31.046 0 20 8.954 0 20 0s20 8.954 20 20z'/%3E%3C/clipPath%3E%3C/defs%3E%3Cg%3E%3Cg%3E%3Cpath fill='none' stroke='%23ff4e4d' stroke-miterlimit='50' stroke-width='4' d='M40 20c0 11.046-8.954 20-20 20S0 31.046 0 20 8.954 0 20 0s20 8.954 20 20z' clip-path='url(&quot;%23lbwma&quot;)'/%3E%3C/g%3E%3Cg%3E%3Cpath fill='none' stroke='%23ff4e4d' stroke-miterlimit='50' stroke-width='2' d='M17.2 28.5v0l8.3-8.3v0l-8.3-8.3v0'/%3E%3C/g%3E%3C/g%3E%3C/svg%3E");
+  }
+}
+
+.reviews__slider_item {
+  height: 100%;
+  padding: 20px;
+}
+
+.reviews__slider_item_box {
+  position: relative;
+  height: 100%;
+  padding: 40px 30px 60px;
+  box-shadow: $shadow;
+  -webkit-border-radius: 15px;
+  -moz-border-radius: 15px;
+  border-radius: 15px;
+  background-color: $white;
+}
+
+.reviews__slider_item_head {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+.reviews__slider_item_body {
+  padding-top: 20px;
+}
+.reviews__slider_item_footer {
+  position: absolute;
+  bottom: 30px;
+  right: 30px;
+}
+
+@include media-breakpoint-up(md) {
+  .reviews {
+    textarea.form-control {
+      height: 144px;
+    }
+  }
+}
