--- a/src/views/pages/clinic.html
+++ b/src/views/pages/clinic.html
@@ -30,6 +30,7 @@
 @@include("../../blocks/modules/breadcrumbs/breadcrumbs-clinic.html")
 @@include("../../blocks/modules/works/works.html")
 @@include("../../blocks/modules/reviews/reviews.html")
+@@include("../../blocks/modules/news/news.html")
 @@include("../../blocks/modules/footer/footer.html")
 @@include("../../blocks/modules/footer/footer-mobile.html")
 <script src="../js/main.js"></script>
