Clinic: added blocks News and Licenses

--- a/src/blocks/_modules.scss
+++ b/src/blocks/_modules.scss
@@ -16,5 +16,6 @@
 @import "modules/works/works";
 @import "modules/reviews/reviews";
 @import "modules/news/news";
+@import "modules/licenses/licenses";
 @import "modules/footer/footer";
 @import "modules/footer/footer-mobile";
