Clinic: added block Guarantees Part 1

--- a/src/blocks/_modules.scss
+++ b/src/blocks/_modules.scss
@@ -17,5 +17,6 @@
 @import "modules/reviews/reviews";
 @import "modules/news/news";
 @import "modules/licenses/licenses";
+@import "modules/guarantees/guarantees";
 @import "modules/footer/footer";
 @import "modules/footer/footer-mobile";
