--- a/src/views/pages/clinic.html
+++ b/src/views/pages/clinic.html
@@ -32,6 +32,7 @@
 @@include("../../blocks/modules/reviews/reviews.html")
 @@include("../../blocks/modules/news/news.html")
 @@include("../../blocks/modules/licenses/licenses.html")
+@@include("../../blocks/modules/guarantees/guarantees.html")
 @@include("../../blocks/modules/footer/footer.html")
 @@include("../../blocks/modules/footer/footer-mobile.html")
 <script src="../js/main.js"></script>
