Clinic: added block Guarantees Table

--- a/src/blocks/_modules.scss
+++ b/src/blocks/_modules.scss
@@ -18,5 +18,6 @@
 @import "modules/news/news";
 @import "modules/licenses/licenses";
 @import "modules/guarantees/guarantees";
+@import "modules/guarantees-table/guarantees-table";
 @import "modules/footer/footer";
 @import "modules/footer/footer-mobile";
