Clinic: added block Clinic Form

--- a/src/blocks/_modules.scss
+++ b/src/blocks/_modules.scss
@@ -19,5 +19,6 @@
 @import "modules/licenses/licenses";
 @import "modules/guarantees/guarantees";
 @import "modules/guarantees-table/guarantees-table";
+@import "modules/clinic-form/clinic-form";
 @import "modules/footer/footer";
 @import "modules/footer/footer-mobile";
