--- a/src/views/pages/clinic.html
+++ b/src/views/pages/clinic.html
@@ -33,6 +33,7 @@
 @@include("../../blocks/modules/news/news.html")
 @@include("../../blocks/modules/licenses/licenses.html")
 @@include("../../blocks/modules/guarantees/guarantees.html")
+@@include("../../blocks/modules/clinic-form/clinic-form.html")
 @@include("../../blocks/modules/footer/footer.html")
 @@include("../../blocks/modules/footer/footer-mobile.html")
 <script src="../js/main.js"></script>
