--- a/src/blocks/modules/clinic-form/clinic-form.scss
+++ b/src/blocks/modules/clinic-form/clinic-form.scss
@@ -16,3 +16,41 @@
     }
   }
 }
+
+
+
+@include media-breakpoint-down(lg) {
+  .clinic-form {
+    .form__block {
+      padding: 30px 0;
+    }
+  }
+}
+@include media-breakpoint-down(md) {
+  .clinic-form {
+    padding: 50px 0;
+    .container {
+      max-width: 100%;
+    }
+  }
+}
+@include media-breakpoint-down(sm) {
+  .clinic-form {
+    padding-top: 0;
+    background-image: none;
+    background-color: $white;
+    .overflow-blue {
+      display: none;
+    }
+    .form__block {
+      margin-left: -15px;
+      margin-right: -15px;
+      padding: 30px 15px;
+      box-shadow: $shadow;
+      -webkit-border-radius: 0;
+      -moz-border-radius: 0;
+      border-radius: 0;
+    }
+  }
+}
+@include media-breakpoint-down(xs) {}
