--- a/src/blocks/modules/guarantees/guarantees.scss
+++ b/src/blocks/modules/guarantees/guarantees.scss
@@ -1,3 +1,36 @@
 .guarantees {
   padding: 50px 0 100px;
 }
+
+
+
+@include media-breakpoint-down(md) {
+  .guarantees {
+    padding: 50px 0;
+    .container {
+      max-width: 100%;
+    }
+  }
+  .guarantees__table {
+    margin-top: 30px;
+  }
+}
+
+@include media-breakpoint-down(sm) {
+  .guarantees__table {
+    margin-left: -15px;
+    margin-right: -15px;
+  }
+  .guarantees__table_list {
+    padding: 0;
+  }
+  .guarantees__table_list_title {
+    background-color: $azure;
+    color: $blue;
+  }
+  .guarantees__table_mobile {
+    margin-top: 10px;
+  }
+}
+
+@include media-breakpoint-down(xs) {}
