--- a/src/blocks/modules/licenses/licenses.scss
+++ b/src/blocks/modules/licenses/licenses.scss
@@ -30,4 +30,66 @@
 
 .licenses__slider_item {
   padding: 15px;
+  text-align: center;
+}
+
+.licenses__slider_item_link {
+  display: inline-block;
+}
+
+
+
+@include media-breakpoint-down(lg) {
+  .licenses {
+    padding-bottom: 80px;
+  }
+  .licenses__slider {
+    margin-top: 50px;
+    .slick-prev {
+      left: -10px;
+    }
+    .slick-next {
+      right: -10px;
+    }
+  }
+}
+
+@include media-breakpoint-down(md) {
+  .licenses__slider {
+    padding-bottom: 50px;
+    .slick-arrow {
+      top: auto;
+      bottom: 0;
+    }
+    .slick-prev {
+      left: 50%;
+      transform: translate(-125%, 0);
+    }
+    .slick-next {
+      right: 50%;
+      transform: translate(125%, 0);
+    }
+  }
+}
+
+@include media-breakpoint-down(sm) {
+  .licenses {
+    padding-bottom: 40px;
+  }
+}
+
+@include media-breakpoint-down(xs) {
+  .licenses {
+    background-color: $white;
+  }
+  .licenses__info {
+    padding: 0;
+    box-shadow: none;
+    -webkit-border-radius: 0;
+    -moz-border-radius: 0;
+    border-radius: 0;
+    .title-5 {
+      margin-bottom: 20px;
+    }
+  }
 }
