Added blocks: Services-1, Services-2, Services-3, Services-4, Services-5, Services-6, Services-7, Services-8

--- a/src/blocks/modules/header/header.scss
+++ b/src/blocks/modules/header/header.scss
@@ -38,7 +38,7 @@
     justify-content: space-between;
   }
   .header__logo {
-    display: flex;
+    display: block;
   }
   .header__btn {
     display: flex;
