--- a/src/blocks/_modules.scss
+++ b/src/blocks/_modules.scss
@@ -3,6 +3,7 @@
 @import "modules/navigation/navigation";
 @import "modules/hamburger/hamburger";
 @import "modules/breadcrumbs/breadcrumbs";
+
 @import "modules/intro/intro";
 @import "modules/home-1/home-1";
 @import "modules/home-2/home-2";
@@ -12,7 +13,7 @@
 @import "modules/home-5/home-5";
 @import "modules/home-6/home-6";
 @import "modules/home-7/home-7";
-@import "modules/map/map";
+
 @import "modules/works/works";
 @import "modules/reviews/reviews";
 @import "modules/news/news";
@@ -20,5 +21,16 @@
 @import "modules/guarantees/guarantees";
 @import "modules/guarantees-table/guarantees-table";
 @import "modules/clinic-form/clinic-form";
+
+@import "modules/services-1/services-1";
+@import "modules/services-2/services-2";
+@import "modules/services-3/services-3";
+@import "modules/services-4/services-4";
+@import "modules/services-5/services-5";
+@import "modules/services-6/services-6";
+@import "modules/services-7/services-7";
+@import "modules/services-8/services-8";
+
+@import "modules/map/map";
 @import "modules/footer/footer";
 @import "modules/footer/footer-mobile";
