Services: added mobile version

--- a/src/blocks/modules/services-10/services-10.scss
+++ b/src/blocks/modules/services-10/services-10.scss
@@ -6,3 +6,11 @@
 .services-10__img {
 	text-align: center;
 }
+
+
+
+@include media-breakpoint-down(sm) {
+	.services-10 {
+		padding: 30px 0 20px;
+	}
+}
