--- a/src/blocks/modules/services-1/services-1.scss
+++ b/src/blocks/modules/services-1/services-1.scss
@@ -2,3 +2,10 @@
 	padding: 50px 0 70px;
 	background-color: $white;
 }
+
+
+@include media-breakpoint-down(sm) {
+	.services-1 {
+		padding: 30px 0;
+	}
+}
