--- a/src/blocks/modules/services-12/services-12.scss
+++ b/src/blocks/modules/services-12/services-12.scss
@@ -46,12 +46,6 @@
 	align-items: center;
 }
 
-.services-12__table_body {
-	.bold {
-		white-space: nowrap;
-	}
-}
-
 .services-12__table_list_item {
 	display: flex;
 	align-items: center;
@@ -64,6 +58,7 @@
 
 .services-12__table_total {
 	width: 100%;
+	max-width: 192px;
 	height: 36px;
 	border: 2px solid #dbdbdb;
 	-webkit-border-radius: 25px;
@@ -79,11 +74,54 @@
 
 
 
+@include media-breakpoint-down(lg) {
+	.services-12 {
+		.container {
+			max-width: 100%;
+		}
+	}
+}
+
 @include media-breakpoint-down(sm) {
+	.services-12 {
+		padding-bottom: 30px;
+		background-color: $white;
+		.title-block {
+			margin-bottom: 0;
+			-webkit-border-radius: 15px 15px 0 0;
+			-moz-border-radius: 15px 15px 0 0;
+			border-radius: 15px 15px 0 0;
+		}
+	}
+	.services-12__btn {
+		display: none;
+	}
+	.services-12__table {
+		box-shadow: none;
+		-webkit-border-radius: 0;
+		-moz-border-radius: 0;
+		border-radius: 0;
+		margin-left: -15px;
+		margin-right: -15px;
+	}
 	.services-12__table_desktop {
 		display: none;
 	}
 	.services-12__table_mobile {
 		display: block;
+		margin: 20px 0 10px;
+	}
+	.services-12__table_head {
+		display: none;
+	}
+	.services-12__table_list_item {
+		&:last-child {
+			height: 60px;
+			-webkit-border-radius: 0 0 15px 15px;
+			-moz-border-radius: 0 0 15px 15px;
+			border-radius: 0 0 15px 15px;
+			background-color: $red;
+			color: $white;
+		}
 	}
 }
