--- a/src/blocks/modules/services-4/services-4.scss
+++ b/src/blocks/modules/services-4/services-4.scss
@@ -10,3 +10,16 @@
 	border-radius: 15px;
 	background-color: $white;
 }
+
+
+
+@include media-breakpoint-down(xs) {
+	.services-4 {
+		background-color: $white;
+	}
+	.services-4__block {
+		margin-left: -15px;
+		margin-right: -15px;
+		padding: 0;
+	}
+}
