--- a/src/blocks/modules/services-6/services-6.scss
+++ b/src/blocks/modules/services-6/services-6.scss
@@ -38,3 +38,17 @@
 	font-family: 'Montserrat-Bold', sans-serif;
 	font-size: 25px;
 }
+
+
+
+@include media-breakpoint-down(xs) {
+	.services-6 {
+		padding: 30px 0;
+		background-color: $white;
+	}
+	.services-6__block {
+		margin-left: -15px;
+		margin-right: -15px;
+		padding: 0;
+	}
+}
