--- a/src/blocks/modules/services-8/services-8.scss
+++ b/src/blocks/modules/services-8/services-8.scss
@@ -2,3 +2,11 @@
 	padding: 80px 0 50px;
 	background-color: $white;
 }
+
+
+
+@include media-breakpoint-down(sm) {
+	.services-8 {
+		padding: 30px 0 20px;
+	}
+}
