--- a/src/blocks/_modules.scss
+++ b/src/blocks/_modules.scss
@@ -34,6 +34,7 @@
 @import "modules/services-10/services-10";
 @import "modules/services-11/services-11";
 @import "modules/services-12/services-12";
+@import "modules/modals/modals";
 
 @import "modules/map/map";
 @import "modules/footer/footer";
