--- a/src/views/pages/services.html
+++ b/src/views/pages/services.html
@@ -43,6 +43,7 @@
 @@include("../../blocks/modules/services-13/services-13.html")
 @@include("../../blocks/modules/footer/footer.html")
 @@include("../../blocks/modules/footer/footer-mobile.html")
+@@include("../../blocks/modules/modals/modals.html")
 <script src="../js/main.js"></script>
 <script src="../js/vendor.js"></script>
 </body>
