--- a/src/blocks/_modules.scss
+++ b/src/blocks/_modules.scss
@@ -3,6 +3,7 @@
 @import "modules/navigation/navigation";
 @import "modules/hamburger/hamburger";
 @import "modules/breadcrumbs/breadcrumbs";
+@import "modules/buffer/buffer";
 
 @import "modules/intro/intro";
 @import "modules/home-1/home-1";
