--- a/src/styles/base/_general.scss
+++ b/src/styles/base/_general.scss
@@ -3,6 +3,9 @@ body {
   font-family: 'Montserrat-Regular', sans-serif;
   font-size: 14px;
   color: $black;
+  &.hidden {
+    overflow: hidden;
+  }
 }
 
 h1, h2, h3, h4, h5, h6, ul {
