Footer: new version

--- a/src/blocks/_modules.scss
+++ b/src/blocks/_modules.scss
@@ -39,4 +39,4 @@
 
 @import "modules/map/map";
 @import "modules/footer/footer";
-@import "modules/footer/footer-mobile";
+//@import "modules/footer/footer-mobile";
