--- a/src/blocks/modules/footer/footer.scss
+++ b/src/blocks/modules/footer/footer.scss
@@ -3,6 +3,14 @@
   background-color: #4b4b4b;
 }
 
+.footer__accordion_link {
+  cursor: pointer;
+}
+
+.footer__accordion_content {
+  display: none;
+}
+
 .footer__list {
   margin-top: 40px;
 }
@@ -81,6 +89,31 @@
 
 @media (max-width: 1400px) {
   .footer {
-    display: none;
+    padding: 30px 0 40px;
+  }
+  .footer__list {
+    margin-top: 0;
+    padding-bottom: 20px;
+    padding-left: 20px;
+  }
+  .footer__accordion_link {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    width: 100%;
+    height: 60px;
+    padding: 0;
+    &.active {
+      .accordion__arrow {
+        transform: translate(-50%,-25%) rotate(135deg);
+      }
+    }
+    .accordion__arrow {
+      position: inherit;
+      transform: translate(-50%, 25%) rotate(-45deg);
+    }
+  }
+  .footer__bottom_list {
+    margin-top: 30px;
   }
 }
