--- a/src/views/index.html
+++ b/src/views/index.html
@@ -39,7 +39,7 @@
         @@include("../blocks/modules/home-7/home-7.html")
         @@include("../blocks/modules/map/map.html")
         @@include("../blocks/modules/footer/footer.html")
-        @@include("../blocks/modules/footer/footer-mobile.html")
+<!--        @@include("../blocks/modules/footer/footer-mobile.html")-->
         <script src="../js/main.js"></script>
         <script src="../js/vendor.js"></script>
     </body>
