--- a/src/blocks/modules/footer/footer.scss
+++ b/src/blocks/modules/footer/footer.scss
@@ -4,11 +4,9 @@
 }
 
 .footer__accordion_link {
-  cursor: pointer;
-}
-
-.footer__accordion_content {
-  display: none;
+  .accordion__arrow {
+    display: none;
+  }
 }
 
 .footer__list {
@@ -87,7 +85,13 @@
 
 
 
-@media (max-width: 1400px) {
+@media (min-width: 1200px) {
+  .footer__accordion_content {
+    display: block !important;
+  }
+}
+
+@media (max-width: 1199.99px) {
   .footer {
     padding: 30px 0 40px;
   }
@@ -103,6 +107,7 @@
     width: 100%;
     height: 60px;
     padding: 0;
+    cursor: pointer;
     &.active {
       .accordion__arrow {
         transform: translate(-50%,-25%) rotate(135deg);
@@ -111,7 +116,11 @@
     .accordion__arrow {
       position: inherit;
       transform: translate(-50%, 25%) rotate(-45deg);
+      display: block;
     }
+  }
+  .footer__accordion_content {
+    display: none;
   }
   .footer__bottom_list {
     margin-top: 30px;
